--- a/ook/templates/home_base.html
+++ b/ook/templates/home_base.html
@@ -5,92 +5,33 @@
 <head>
   <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/bootstrap.less" />
   <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/responsive.less" />
-  <script src="{{ MEDIA_URL }}/js/less-1.3.0.min.js" type="text/javascript">
-</script>
+  <script src="{{ MEDIA_URL }}/js/less-1.3.0.min.js" type="text/javascript"></script>
+  <style>
+    body { padding-top:90px; }
+  </style>
   <title>Ook</title>
 </head>
 
 <body>
     {% block head %}
-    <!-- add list modal -->    
-    <div id="add-booklist-modal" class="modal hide fade">
-        <div class="modal-header">              
-            <a class="close" data-dismiss="modal" >&times;</a>
-            <h3>Add new booklist</h3>
-       </div> <!-- modal-header -->
+    
+      {% include "home_add_booklist_modal.html" %}
+      {% include "home_navbar.html" %}
 
-        <div class="modal-body">
-            <form class="form-horizontal">
-                <fieldset>
-                    <div class="control-group" id="add-booklist-modal-input">
-                        <label for="add-booklist-modal-input" class="control-label">New booklist name</label>
-                        <div class="controls" >
-                            <input type="text" class="input-xlarge" placeholder="Type the name here..." name="booklist_name">
-                            <p class="help-block hide" id="add-booklist-modal-success">Success</p>
-                            <p class="help-block hide" id="add-booklist-modal-error">Error!</p>
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
-        </div> <!-- modal body -->
-
-        <div class="modal-footer">
-            <a href="#" class="btn" data-dismiss="modal" >Close</a>
-            <button id="add-booklist-modal-add-button" class="btn btn-primary" data-loading-text="loading...">Add booklist</button>
-        </div><!-- modal footer -->
-    </div><!-- modal -->
-
-    <!-- navbar -->
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-
-          <!-- logo -->
-        <a class="brand" href="#">Ook</a>
-
-        <div class="nav-collapse">
-            <ul class="nav">
-              <li class="divider-vertical"></li>
-
-              <!-- booklists -->
-              <li class="dropdown" id="navbar-books">
-                <a href="#" class="dropdown-toggle">Books<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li class="nav-header">Booklists</li>
-                    {% autoescape off %} {{ booklists_html }} {% endautoescape %}
-                    <li class="divider"></li>
-                    <li class="nav-header">Booklists tools</li>
-                    <li><a href="#add-booklist-modal" data-toggle="modal"><i class="icon-plus"></i>New list...</a></li>
-                    <li><a href="#"><i class="icon-pencil"></i>Edit lists</a></li>
-                </ul>
-              </li>
-              
-              <!-- second -->
-              <li class="divider-vertical"></li>
-              <li><a href="#about"><i class="icon-heart icon-white"></i></a></li>
-              
-              <!-- third -->
-              <li class="divider-vertical"></li>
-              <li><a href="#contact"><i class="icon-inbox icon-white"></i></a></li>
-              <li class="divider-vertical"></li>
-
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
     {% endblock %}
 
-  <div class="container">
+    {% block pages %}
   
-    {% block content %}{% endblock %}
-  </div>
-  
+      {% include "booklist.html" %}
+    
+    {% endblock %}
+    
+    <div class="container">
+      <hr>
+      <footer>
+        test
+      </footer>
+    </div>
       <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
