styling the booklist

--- a/books/templates/booklist.html
+++ b/books/templates/booklist.html
@@ -1,26 +1,99 @@
-<div class="container">
+
+<div class="container main-view" id="booklist-view">
+  <div class="page-header">
+    <h1>A Booklist!</h1>
+  </div>
+
   <div class="row">
     <!-- left column -->
     <div class="span4">
-      
       <!-- item 1 -->
-      <div class="booklist-item" style="background-color:#EEE; height:75px; padding: 10px; border-bottom: 1px solid black;">
-        
-        <!-- booklet container -->
-        <div class="booklist-item-booklet-container" style="width:75px; background-color:#DDD; height:75px; margin-right: 10px;">
-            <div class="booklist-item-booklet-image"></div>
-            &nbsp;
-        </div>
-        
-        <!-- data container -->
-        <div class="booklist-item-data-container" style="background-color:#CCC;">
-            
-        </div>
+      <div class="booklist-item">       
+              <!-- booklet container -->
+              <div class="booklet-image thumbnail">
+                <img src="http://placehold.it/80x100" alt="Booklet">
+              </div>
+              
+              <!-- data container -->
+              <div class="data-container">
+                  <h4>Płukanie gardła i inne historie</h4>
+                  <h6>Stefan Prykalski</h6>
+              </div>
+              
+              <!-- toolkit container -->
+              <div class="toolkit-container">
+                <div class="icon"><i class="icon-chevron-right"></i></div>
+                <div class="icon"><i class="icon-pencil"></i></div>
+                <div class="icon"><i class="icon-trash"></i></div>
+              </div>
+      </div>      
+
+      <!-- item 2 -->
+      <div class="booklist-item">       
+              <!-- booklet container -->
+              <div class="booklet-image thumbnail">
+                <img src="http://placehold.it/80x100" alt="Booklet">
+              </div>
+              
+              <!-- data container -->
+              <div class="data-container">
+                  <h4>Bekanie na zawołanie</h4>
+                  <h6>Dorota Rabczewska</h6>
+              </div>
+              
+              <!-- toolkit container -->
+              <div class="toolkit-container">
+                <div class="icon"><i class="icon-chevron-right"></i></div>
+                <div class="icon"><i class="icon-pencil"></i></div>
+                <div class="icon"><i class="icon-trash"></i></div>
+              </div>
       </div>
-    &nbsp;
-      
+
+      <!-- item 3 -->
+      <div class="booklist-item">       
+              <!-- booklet container -->
+              <div class="booklet-image thumbnail">
+                <img src="http://placehold.it/80x100" alt="Booklet">
+              </div>
+              
+              <!-- data container -->
+              <div class="data-container">
+                  <h4>Dupa mnie boli - katalog dolegliwości gastrycznych</h4>
+                  <h6>Paweł Miłobędzki</h6>
+              </div>
+              
+              <!-- toolkit container -->
+              <div class="toolkit-container">
+                <div class="icon"><i class="icon-chevron-right"></i></div>
+                <div class="icon"><i class="icon-pencil"></i></div>
+                <div class="icon"><i class="icon-trash"></i></div>
+              </div>
+
+      </div>
+
+      <!-- item 4 -->
+      <div class="booklist-item">       
+              <!-- booklet container -->
+              <div class="booklet-image thumbnail">
+                <img src="http://placehold.it/80x100" alt="Booklet">
+              </div>
+              
+              <!-- data container -->
+              <div class="data-container">
+                  <h4>Jebie mnie to. Pamiętnik życia buca</h4>
+                  <h6>Paweł Miłobędzki</h6>
+              </div>
+              
+              <!-- toolkit container -->
+              <div class="toolkit-container">
+                <div class="icon"><i class="icon-chevron-right"></i></div>
+                <div class="icon"><i class="icon-pencil"></i></div>
+                <div class="icon"><i class="icon-trash"></i></div>
+              </div>
+
+      </div>
     </div>
-    
+
     <!-- middle column -->
     <div class="span4">
       B
