--- a/ook/templates/home_base.html
+++ b/ook/templates/home_base.html
@@ -3,11 +3,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/bootstrap.less" />
-  <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/responsive.less" />
+  <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/ook.less" />
   <script src="{{ MEDIA_URL }}/js/less-1.3.0.min.js" type="text/javascript"></script>
   <style>
-    body { padding-top:90px; }
   </style>
   <title>Ook</title>
 </head>
@@ -26,7 +24,7 @@
     
     {% endblock %}
     
-    <div class="container">
+    <div class="container" id="page-footer-container">
       <hr>
       <footer>
         test
