--- a/ook/media/less/ook.less
+++ b/ook/media/less/ook.less
@@ -6,7 +6,7 @@
 body { padding-top:50px; }
 
 .main-view {
-    overflow: auto;
+    overflow:hidden;
 }
 
 #page-footer-container {
@@ -16,11 +16,53 @@ body { padding-top:50px; }
 /*
 * Bookist items
 */
+#booklist-view .navbar .nav > li > a {
+    color: @grayLighter;
+}
+
+#booklist-view .navbar .nav > li > a:hover {
+    color: @white;
+    background-color: @blue;
+}
+
+#booklist-view .navbar-inner {
+  #gradient > .vertical(@blue, @blueDark);
+}
+
+#booklist-view .navbar-search {
+    .search-query {
+        background-color: @grayLighter;
+        
+        &:focus,
+        &.focused {
+            background-color: @white;
+        }
+    }
+}
+
+#booklist {
+    overflow:hidden;
+    position:relative;
+}
+
+#booklist > .booklist-page {
+    float:left;
+    overflow: auto;
+}
+
+.booklist-scrollbar-top,
+.booklist-scrollbar-bottom {
+    background: @white;
+    width: 100%;
+    // ? center
+}
+
 .booklist-item {
-    width: 278px;
+    margin: 4px;
+    width: 285px;
+    float: left;
     background-color:@grayLighter; 
     overflow:hidden;
-    position: relative;
     padding: 10px;
     margin-bottom: 10px;
     .border-radius(5px);
@@ -33,16 +75,15 @@ body { padding-top:50px; }
 
 .booklist-item > .booklet-image {
   margin-right: 10px;
+  height: 60px;
 }
 
 .booklist-item > .data-container {
-    width: 156px;
+    width: 193px;
     margin-right: 10px
 }
 
 .booklist-item > .toolkit-container {
-    height:100%;
-
 }
 
 .booklist-item > .toolkit-container > .icon {
