--- a/ook/templates/home_base.html
+++ b/ook/templates/home_base.html
@@ -3,26 +3,17 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/ook.less" />
-  <script src="{{ MEDIA_URL }}/js/less-1.3.0.min.js" type="text/javascript"></script>
-  <style>
-  </style>
+  <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}/css/ook.css" />
   <title>Ook</title>
 </head>
 
 <body>
     {% block head %}
-    
       {% include "home_add_booklist_modal.html" %}
       {% include "home_navbar.html" %}
-
     {% endblock %}
 
-    {% block pages %}
-  
-      {% include "booklist.html" %}
-    
-    {% endblock %}
+    {% block pages %} {% include "booklist.html" %} {% endblock %}
     
     <div class="container" id="page-footer-container">
       <hr>
@@ -32,22 +23,13 @@
     </div>
       <!-- Le javascript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ MEDIA_URL }}/js/jquery-1.7.2.min.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-transition.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-alert.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-modal.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-dropdown.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-scrollspy.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-tab.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-tooltip.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-popover.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-button.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-collapse.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-carousel.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap-typeahead.js"></script>
+    <!-- Placed at the end of the document so the pages load faster (libraries) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="{{ MEDIA_URL }}/js/bootstrap.min.js"></script>
     <script src="{{ MEDIA_URL }}/js/hogan-2.0.0.js"></script>
+    <script src="{{ MEDIA_URL }}/js/sprintf.js"></script>
     
+    <!-- Application js -->
     <script src="{{ MEDIA_URL }}/js/templates.js"></script>
     <script src="{{ MEDIA_URL }}/js/ook.js"></script>
 </body>
