handle adding books

--- a/books/templates/booklist.html
+++ b/books/templates/booklist.html
@@ -1,6 +1,6 @@
 {% include "add_book_modal.html" %}
 
-<div class="container main-view" id="booklist-view" >
+<div class="container main-view hide" id="booklist-view" >
   {% include "booklist_menu.html" %}
   {% include "booklist_pagination.html" %}
   
