--- a/books/templates/booklist_menu.html
+++ b/books/templates/booklist_menu.html
@@ -8,7 +8,7 @@
     <span class="icon-bar"></span>
   </a>
 
-  <a class="brand">A booklist</a>
+  <a class="brand" id="booklist-title">A booklist</a>
   
   <ul class="nav">
     <li>
