--- a/profiles/templates/profiles_base.html
+++ b/profiles/templates/profiles_base.html
@@ -3,10 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/bootstrap.less" />
-  <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}/less/responsive.less" />
-  <script src="{{ MEDIA_URL }}/js/less-1.3.0.min.js" type="text/javascript">
-</script>
+  <link rel="stylesheet" href="{{MEDIA_URL}}/css/ook.css" />  
   <title>Ook</title>
 </head>
 
