fix sending new booklist data

--- a/ook/templates/home_add_booklist_modal.html
+++ b/ook/templates/home_add_booklist_modal.html
@@ -11,7 +11,7 @@
                 <div class="control-group" id="add-booklist-modal-input">
                     <label for="add-booklist-modal-input" class="control-label">New booklist name</label>
                     <div class="controls" >
-                        <input type="text" class="input-xlarge" placeholder="Type the name here..." name="booklist_name">
+                        <input type="text" class="input-xlarge" placeholder="Type the name here..." name="name">
                         <p class="help-block hide" id="add-booklist-modal-success">Success</p>
                         <p class="help-block hide" id="add-booklist-modal-error">Error!</p>
                     </div>
