--- a/ook/templates/home_base.html
+++ b/ook/templates/home_base.html
@@ -25,6 +25,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster (libraries) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="{{ MEDIA_URL }}/js/jquery.cookie.js"></script>
+    <script src="{{ MEDIA_URL }}/js/json2.js"></script>
     <script src="{{ MEDIA_URL }}/js/bootstrap.min.js"></script>
     <script src="{{ MEDIA_URL }}/js/hogan-2.0.0.js"></script>
     <script src="{{ MEDIA_URL }}/js/sprintf.js"></script>
